# server/routes/index.ts
@@ -1,5 +1,6 @@
 import express from 'express';
 import urlRoutes from './url';
+import authRoutes from './auth';
 import statusRoutes from './status';
 import handleRedirect from '../controllers/redirect';
 import { rateLimits } from '../middlewares/rate-limit';
@@ -7,6 +8,7 @@ import { rateLimits } from '../middlewares/rate-limit';
 const router = express.Router();
 
 router.use('/api/status', statusRoutes);
+router.use('/api/auth', authRoutes);
 router.use('/api/urls', urlRoutes);
 router.get('/:code', rateLimits.general, handleRedirect);
 
